--- a/config/scaffolding/SIQA_2402_AWSPPProject.yml
+++ b/config/scaffolding/SIQA_2402_AWSPPProject.yml
@@ -11,30 +11,14 @@ packages:
   wpmServer: https://packages.webmethods.io
   wpmRegistry: licensed
 services:
-- serviceName: project.siqa_2402_awspp.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections:Database_1
-  packages:
-  - name: SIQA_2402_AWSPPProject
-    version: "1.0"
-- serviceName: project.siqa_2402_awspp.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:DBInsert
-  packages:
-  - name: SIQA_2402_AWSPPProject
-    version: "1.0"
 - serviceName: project.siqa_2402_awspp.integrations:SIQAAdapterFlow
   packages:
   - name: SIQA_2402_AWSPPProject
     version: "1.0"
-- serviceName: project.siqa_2402_awspp.integrations:Sum
+- serviceName: project.siqa_2402_awspp.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.operations.actions:test
   packages:
   - name: SIQA_2402_AWSPPProject
     version: "1.0"
-- serviceName: pub.math:addInts
-  packages:
-  - name: WmPublic
-    version: 11.1.0.0.1
-- serviceName: pub.flow:debugLog
-  packages:
-  - name: WmPublic
-    version: 11.1.0.0.1
 configurationVariables:
   ? artConnection.SIQA_2402_AWSPPProject.project.siqa_2402_awspp.WmJDBCAdapter.com_wm_adapter_wmjdbc_JDBCAdapter.connections.Database_1.connectionEnabled
   : "false"
