--- a/config/scaffolding/SIQA_2402_AWSPPProject.yml
+++ b/config/scaffolding/SIQA_2402_AWSPPProject.yml
@@ -15,6 +15,11 @@ packages:
   gitUrl: https://github.com/Karthik-V-IBM-10
   gitUsername: Karthik-V-IBM-10
   gitBranch: main
+- name: SSL_JDBC_Test
+  gitServerName: prabhakarsag
+  gitUrl: https://github.com/prabhakarsag
+  gitUsername: prabhakarsag
+  gitBranch: main
 services:
 - serviceName: project.siqa_2402_awspp.integrations:SIQAAdapterFlow
   packages:
