--- a/config/scaffolding/SIQA_2402_AWSPPProject.yml
+++ b/config/scaffolding/SIQA_2402_AWSPPProject.yml
@@ -20,6 +20,11 @@ packages:
   gitUrl: https://github.com/prabhakarsag
   gitUsername: prabhakarsag
   gitBranch: main
+- name: JMS2waySSL
+  gitServerName: prabhakarsag
+  gitUrl: https://github.com/prabhakarsag
+  gitUsername: prabhakarsag
+  gitBranch: main
 services:
 - serviceName: project.siqa_2402_awspp.integrations:SIQAAdapterFlow
   packages:
